--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
   </head>
   <body>
     <h1>Hello, I'm Sherry LaMonica</h1>
-    <p>Welcome to my GitHub Pages site. I'm a Consulting Member of Technical Staff in the Oracle Machine Learning Product Management group.</p>
+    <p>Welcome to my GitHub Pages site. I'm a consulting member of technical staff in the Oracle Machine Learning Product Management group.</p>
   </body
 </html>
